// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hello world with a handler will alter a parameter with before and after handlers 1`] = `
Array [
  Object {
    "message": "Whirled",
  },
]
`;

exports[`hello world with a handler will honor handlers over an HTTP call - GET 1`] = `"[{\\"message\\":\\"whirled!!!\\"}]"`;

exports[`hello world with a handler will honor handlers over an HTTP call - GET 2`] = `"[{\\"message\\":\\"amazing!!!\\"}]"`;

exports[`hello world with a handler will honor handlers with a client call 1`] = `
Array [
  Object {
    "message": "nodey thing!!!",
  },
]
`;

exports[`hello world with a handler will honor handlers with an embeddable engine 1`] = `
Array [
  Object {
    "message": "hole!!!",
  },
]
`;
